--- a/schedule.html
+++ b/schedule.html
@@ -40,13 +40,6 @@
 						<td></td>
 					</tr>
 					<tr>
-						<td>164 Howard Street</td>
-						<td>Johnny and the Machine</td>
-						<td></td>
-						<td></td>
-						<td></td>
-					</tr>
-					<tr>
 						<td>15 Morgan Street</td>
 						<td>Misc Bands: 2- 3 PM</td>
 						<td>Eamonn Sheehan: 3 - 4 PM</td>
@@ -110,16 +103,142 @@
 						<td><a href="https://www.facebook.com/skibunnyw4m/" target="_blank">Ski Bunny</a>: 5 - 6 PM<br/><br/><a href="https://skibunnyw4m.com/" target="_blank">https://skibunnyw4m.com/</a></td>
 					</tr>
 					<tr>
-						<td>70 East Emerson</td>
-						<td>TuttaCrumbs</td>
+						<td>65 Cleveland Street</td>
+						<td>The Bag Boys: 5 - 6 PM</td>
 						<td></td>
 						<td></td>
 						<td></td>
 					</tr>
 					<tr>
-						<td>65 Cleveland Street (one band only)</td>
-						<td>The Bag Boys: 5 - 6 PM</td>
+						<td>123 Linwood</td>
+						<td>The 2 Micks and Friends 2 - 3:30 PM</td>
+						<td>Local Surprise 3:30 - 4:30</td>
+						<td>The 2 Mike Experience 4:30 - 6:00</td>
 						<td></td>
+					</tr>
+					<tr>
+						<td>128 Rowe St.</td>
+						<td><a href="alainalynne.bandcamp.com" target="_blank">Alaina Lynne</a> 3 - 4:00 PM</td>
+						<td></td>
+						<td></td>
+						<td></td>
+					</tr>
+					<tr>
+						<td>135 Mount Vernon Ave.</td>
+						<td>Boston Rock Bottom 2 - 2:45 PM</td>
+						<td>Mark Bates 2:45 - 3:30 PM</td>
+						<td>Craig Waterman 3:30 - 4:15 PM</td>
+						<td>TimKo & Co 4:15 - 6 PM</td>
+					</tr>
+					<tr>
+						<td>136 Florence St. #2</td>
+						<td>Pro Bono 5 - 6PM</td>
+						<td></td>
+						<td></td>
+						<td></td>
+					</tr>
+					<tr>
+						<td>25 Elm St.</td>
+						<td><a href="https://www.youtube.com/user/bb5877" target="_blank">Bill Barrasso</a> 2 - 3 PM</td>
+						<td></td>
+						<td>Hunters and Gatherers 4 - 5 PM</td>
+						<td></td>
+					</tr>
+					<tr>
+						<td>31 Stevens Rd.</td>
+						<td>Hard Core Driven 3 - 4 PM</td>
+						<td>Tail 4 - 6 PM https://www.tailband.com/</td>
+						<td></td>
+						<td></td>
+					</tr>
+					<tr>
+						<td>37 Nowell Rd.</td>
+						<td>The Stacking Stones 4 - 6 PM</td>
+						<td></td>
+						<td></td>
+						<td></td>
+					</tr>
+					<tr>
+						<td>42 Bratley Street</td>
+						<td>Ivy 3-4PM</td>
+						<td><a href="https://www.facebook.com/thejohngabrielexperience/?modal=admin_todo_tour" target="_blank">Bella Flash</a> 4:30-6PM</td>
+						<td></td>
+						<td></td>
+					</tr>
+					<tr>
+						<td>47 Porter St.</td>
+						<td>Tina Lech & Ted Davis 2-3:30PM</td>
+						<td>Molly Maguires 3:30-4PM<br/>George Keith & Martin Langer 4-4:30</td>
+						<td>Laura Feddersen & Nathan Gourley 4:30-5PM<br/>Molly Maguires 5-5:30PM</td>
+						<td>Tina Lech & Ted Davis 5:30-6PM</td>
+					</tr>
+					<tr>
+						<td>52 Richardson Rd.</td>
+						<td>Teal Street Band  2 - 4PM</td>
+						<td>Clutch 2-4</td>
+						<td></td>
+						<td></td>
+					</tr>
+					<tr>
+						<td>58 Albion St.</td>
+						<td>JBJ and Blended Family 5 - 6 PM</td>
+						<td></td>
+						<td></td>
+						<td></td>
+					</tr>
+					<tr>
+						<td>70 East Emerson St.</td>
+						<td></td>
+						<td>Miranda Rae  4 - 5PM</td>
+						<td>Linen & Lace 5 - 6PM</td>
+						<td></td>
+					</tr>
+					<tr>
+						<td>77 Florence Ave.</td>
+						<td>The Hopeful Monsters 2 - 3:30PM</td>
+						<td>Pete Maricle 3:30 - 4:30PM</td>
+						<td>Ryan Pepi 4:30 - 5:30</td>
+						<td>Jason Keohane 5:30 - 6:30</td>
+					</tr>
+					<tr>
+						<td>4 Gould St.</td>
+						<td><a href="www.jonschommer.bandcamp.com" target="_blank">Jon Schommer and the Hopeful Sound</a> 2-3:15PM</td>
+						<td>The Instamatics 3:15-4:30PM</td>
+						<td><a href="https://www.facebook.com/thenewfrustrations/" target="_blank">The New Frustrations</a>  4:30-6PM<br/><a href="https://thenewfrustrations.bandcamp.com/" target="_blank">https://thenewfrustrations.bandcamp.com/</a></td>
+						<td></td>
+					</tr>
+					<tr>
+						<td>17 Laurel St.</td>
+						<td><a href="https://www.facebook.com/JesseDelMusic/" target="_blank">Jesse DeLaurier</a> 4-5PM</td>
+						<td></td>
+						<td></td>
+						<td></td>
+					</tr>
+					<tr>
+						<td>100 Derby Rd.</td>
+						<td><a href="https://www.facebook.com/ThebandLaika" target="_blank">Laika</a> 2-3PM</td>
+						<td>Polyethylene 3-4PM</td>
+						<td><a href="http://buddyv.org" target="_blank">Buddy V</a><br/><a href="https://www.reverbnation.com/buddyv" target="_blank">https://www.reverbnation.com/buddyv</a></td>
+						<td></td>
+					</tr>
+					<tr>
+						<td>164 Howard Street</td>
+						<td>Johanna Lake 3 - 4 PM</td>
+						<td>Eddie Miller 4 - 5:30 PM</td>
+						<td></td>
+						<td></td>
+					</tr>
+					<tr>
+						<td>167 Florence St.</td>
+						<td>The Boston Rag 2-3:30PM</td>
+						<td></td>
+						<td></td>
+						<td></td>
+					</tr>
+					<tr>
+						<td>441 Main St.</td>
+						<td>Tutta Crumbs 2 - 4PM</td>
+						<td>OTA 4-6PM</td>
 						<td></td>
 						<td></td>
 					</tr>
