--- a/schedule.html
+++ b/schedule.html
@@ -35,7 +35,7 @@
 					<tr>
 						<td>100 Cottage Street</td>
 						<td>ETC: 2 - 3 PM</td>
-						<td><a href="https://www.facebook.com/artisancheesetheband" target="_blank">Artisan Cheese</a>[: 3 - 4:30 PM</td>
+						<td><a href="https://www.facebook.com/artisancheesetheband" target="_blank">Artisan Cheese</a>: 3 - 4:30 PM</td>
 						<td><a href="https://www.facebook.com/RayLirianoLaLiga" target="_blank">Ray Liriano Experience</a>: 4:30 - 6PM</td>
 						<td></td>
 					</tr>
@@ -49,8 +49,8 @@
 					<tr>
 						<td>34 Cleveland Street</td>
 						<td>Torres Mouth: 2 - 4 PM</td>
+						<td><a href="www.jonschommer.bandcamp.com" target="_blank">Jon Schommer and the Hopeful Sound</a>: 2-3:15PM</td>
 						<td><a href="http://www.theresurrectionists.bandcamp.com" target="_blank">The Resurrectionists</a>: 4 - 6 PM</td>
-						<td></td>
 						<td></td>
 					</tr>
 					<tr>
@@ -90,7 +90,7 @@
 					</tr>
 					<tr>
 						<td>39 Mystic Ave</td>
-						<td>Aaron Spransy: 2 - 3 PM</td>
+						<td><a href="https://sinnet.bandcamp.com" target="_blank">Papa Spransy + Glossy Thom of Sinnet</a>: 2 - 3 PM<br/><a href="www.sinnetsongs.com" target="_blank">www.sinnetsongs.com</a></td>
 						<td>Porchquest: 3 - 4 PM</td>
 						<td>The Erlenmeyers: 4 - 6 PM</td>
 						<td></td>
@@ -99,8 +99,8 @@
 						<td>112 Upham</td>
 						<td>Girl Skull: 2 - 3 PM</td>
 						<td><a href="https://www.facebook.com/powerslutband/" target="_blank">PowerSlut</a>: 3 - 4 PM<br/><br/><a href="https://powerslut.bandcamp.com/" target="_blank">https://powerslut.bandcamp.com/</a></td>
-						<td><a href="https://facebook.com/profile.php?id=1535309643359021&ref=content_filter" target="_blank">Madam Bruja</a>: 4 - 5 PM<br/><br/><a href="https://madambruja.bandcamp.com/releases" target="_blank">https://madambruja.bandcamp.com/releases</a></td>
-						<td><a href="https://www.facebook.com/skibunnyw4m/" target="_blank">Ski Bunny</a>: 5 - 6 PM<br/><br/><a href="https://skibunnyw4m.com/" target="_blank">https://skibunnyw4m.com/</a></td>
+						<td><a href="https://facebook.com/profile.php?id=1535309643359021&ref=content_filter" target="_blank">Madam Bruja</a>: 5 - 6 PM<br/><br/><a href="https://madambruja.bandcamp.com/releases" target="_blank">https://madambruja.bandcamp.com/releases</a></td>
+						<td></td>
 					</tr>
 					<tr>
 						<td>65 Cleveland Street</td>
@@ -140,7 +140,7 @@
 					<tr>
 						<td>25 Elm St.</td>
 						<td><a href="https://www.youtube.com/user/bb5877" target="_blank">Bill Barrasso</a> 2 - 3 PM</td>
-						<td></td>
+						<td>Jude Lowery 3 - 3:30PM</td>
 						<td>Hunters and Gatherers 4 - 5 PM</td>
 						<td></td>
 					</tr>
@@ -202,7 +202,7 @@
 					</tr>
 					<tr>
 						<td>4 Gould St.</td>
-						<td><a href="www.jonschommer.bandcamp.com" target="_blank">Jon Schommer and the Hopeful Sound</a> 2-3:15PM</td>
+						<td></td>
 						<td>The Instamatics 3:15-4:30PM</td>
 						<td><a href="https://www.facebook.com/thenewfrustrations/" target="_blank">The New Frustrations</a>  4:30-6PM<br/><a href="https://thenewfrustrations.bandcamp.com/" target="_blank">https://thenewfrustrations.bandcamp.com/</a></td>
 						<td></td>
@@ -239,6 +239,12 @@
 						<td>441 Main St.</td>
 						<td>Tutta Crumbs 2 - 4PM</td>
 						<td>OTA 4-6PM</td>
+						<td></td>
+						<td></td>
+					</tr>
+					<tr>
+						<td>34 Oakland St.</td>
+						<td><a href="https://www.facebook.com/somervillemaband/" target="_blank">The Deadliners</a>: 2-3PM</td>
 						<td></td>
 						<td></td>
 					</tr>
