fixing schedule problems

--- a/schedule.html
+++ b/schedule.html
@@ -44,18 +44,18 @@
 						<td>Misc Bands: 2- 3 PM</td>
 						<td>Eamonn Sheehan: 3 - 4 PM</td>
 						<td><a href="https://www.youtube.com/watch?v=owF86LPnM_E" target="_blank">J. Van Cleave</a>: 4 - 5 PM</td>
-						<td>Bohemians: 5 -5 6 PM</td>
+						<td>Bohemians: 5 - 6 PM</td>
 					</tr>
 					<tr>
 						<td>34 Cleveland Street</td>
 						<td>Torres Mouth: 2 - 4 PM</td>
-						<td><a href="www.jonschommer.bandcamp.com" target="_blank">Jon Schommer and the Hopeful Sound</a>: 2-3:15PM</td>
-						<td><a href="http://www.theresurrectionists.bandcamp.com" target="_blank">The Resurrectionists</a>: 4 - 6 PM</td>
+						<td><a href="www.jonschommer.bandcamp.com" target="_blank">Jon Schommer and the Hopeful Sound</a>: 4 - 5 PM</td>
+						<td><a href="http://www.theresurrectionists.bandcamp.com" target="_blank">The Resurrectionists</a>: 5 - 6 PM</td>
 						<td></td>
 					</tr>
 					<tr>
 						<td>40 West Wyoming Ave</td>
-						<td>Bill McQuaid</td>
+						<td>Bill + Sammy McQuaid 3-5PM</td>
 						<td></td>
 						<td></td>
 						<td></td>
@@ -64,20 +64,20 @@
 						<td>18 Bellevue Ave</td>
 						<td>The Jury's Out: 2 - 4 PM</td>
 						<td><a href="https://www.facebook.com/willdepianomusic/" target="_blank">Will DePiano</a>: 4 - 5PM<br/><br/><a href="https://youtu.be/A_MMR0BcqWs" target="_blank">https://youtu.be/A_MMR0BcqWs</a></td>
-						<td>Jennie Wengrovius: 5 -5 6 PM</td>
+						<td>Jennie Wengrovius: 5 - 6 PM</td>
 						<td></td>
 					</tr>
 					<tr>
 						<td>30 Vine Street</td>
 						<td>No Relation: 2 - 3:30 PM</td>
 						<td><a href="https://www.facebook.com/noelsmyth2012" target="_blank">Noel Smyth and Co</a>: 3:30 - 4:30 PM</td>
-						<td>The Mark CataldoTrio: 4:30 - 6 PM</td>
+						<td>The Mark Cataldo Trio: 4:30 - 6 PM</td>
 						<td></td>
 					</tr>
 					<tr>
 						<td>245 West Wyoming Ave</td>
-						<td><a href="http://lindamarksmusic.com" target="_blank">Linda Marks</a>: 2 - 3 PM</td>
-						<td></td>
+						<td><a href="http://lindamarksmusic.com" target="_blank">Linda Marks</a>: 2 - 3:30 PM</td>
+						<td>Johnny &amp; The Machine: 3:30 - 5 PM</td>
 						<td></td>
 						<td></td>
 					</tr>
@@ -96,7 +96,7 @@
 						<td></td>
 					</tr>
 					<tr>
-						<td>112 Upham</td>
+						<td>112 Upham St.</td>
 						<td>Girl Skull: 2 - 3 PM</td>
 						<td><a href="https://www.facebook.com/powerslutband/" target="_blank">PowerSlut</a>: 3 - 4 PM<br/><br/><a href="https://powerslut.bandcamp.com/" target="_blank">https://powerslut.bandcamp.com/</a></td>
 						<td><a href="https://facebook.com/profile.php?id=1535309643359021&ref=content_filter" target="_blank">Madam Bruja</a>: 5 - 6 PM<br/><br/><a href="https://madambruja.bandcamp.com/releases" target="_blank">https://madambruja.bandcamp.com/releases</a></td>
@@ -110,7 +110,7 @@
 						<td></td>
 					</tr>
 					<tr>
-						<td>123 Linwood</td>
+						<td>123 Linwood Ave.</td>
 						<td>The 2 Micks and Friends 2 - 3:30 PM</td>
 						<td>Local Surprise 3:30 - 4:30</td>
 						<td>The 2 Mike Experience 4:30 - 6:00</td>
@@ -174,8 +174,8 @@
 					</tr>
 					<tr>
 						<td>52 Richardson Rd.</td>
-						<td>Teal Street Band  2 - 4PM</td>
-						<td>Clutch 2-4</td>
+						<td>Teal Street Band  2 - 4 PM</td>
+						<td>Clutch 4 - 6 PM</td>
 						<td></td>
 						<td></td>
 					</tr>
@@ -195,10 +195,10 @@
 					</tr>
 					<tr>
 						<td>77 Florence Ave.</td>
-						<td>The Hopeful Monsters 2 - 3:30PM</td>
-						<td>Pete Maricle 3:30 - 4:30PM</td>
-						<td>Ryan Pepi 4:30 - 5:30</td>
-						<td>Jason Keohane 5:30 - 6:30</td>
+						<td>The Hopeful Monsters 2 - 3:30 PM</td>
+						<td>Pete Maricle 3:30 - 4:30 PM</td>
+						<td>Ryan Pepi 4:30 - 5:30 PM</td>
+						<td>Jason Keohane 5:30 - 6 PM</td>
 					</tr>
 					<tr>
 						<td>4 Gould St.</td>
@@ -210,7 +210,7 @@
 					<tr>
 						<td>17 Laurel St.</td>
 						<td><a href="https://www.facebook.com/JesseDelMusic/" target="_blank">Jesse DeLaurier</a> 4-5PM</td>
-						<td></td>
+						<td><a href="https://www.facebook.com/freerangechickensband/" target="_blank">Free Range Chickens</a> 5 - 6 PM</td>
 						<td></td>
 						<td></td>
 					</tr>
@@ -218,7 +218,7 @@
 						<td>100 Derby Rd.</td>
 						<td><a href="https://www.facebook.com/ThebandLaika" target="_blank">Laika</a> 2-3PM</td>
 						<td>Polyethylene 3-4PM</td>
-						<td><a href="http://buddyv.org" target="_blank">Buddy V</a><br/><a href="https://www.reverbnation.com/buddyv" target="_blank">https://www.reverbnation.com/buddyv</a></td>
+						<td><a href="http://buddyv.org" target="_blank">Buddy V</a> 4 - 6 PM<br/><a href="https://www.reverbnation.com/buddyv" target="_blank">https://www.reverbnation.com/buddyv</a></td>
 						<td></td>
 					</tr>
 					<tr>
