last minute changes

--- a/schedule.html
+++ b/schedule.html
@@ -132,7 +132,7 @@
 					</tr>
 					<tr>
 						<td>136 Florence St. #2</td>
-						<td>Pro Bono 5 - 6PM</td>
+						<td>Pro Bono: A U2 Tribute Band 5 - 6PM</td>
 						<td></td>
 						<td></td>
 						<td></td>
@@ -204,7 +204,7 @@
 						<td>4 Gould St.</td>
 						<td></td>
 						<td>The Instamatics 3:15-4:30PM</td>
-						<td><a href="https://www.facebook.com/thenewfrustrations/" target="_blank">The New Frustrations</a>  4:30-6PM<br/><a href="https://thenewfrustrations.bandcamp.com/" target="_blank">https://thenewfrustrations.bandcamp.com/</a></td>
+						<td></td>
 						<td></td>
 					</tr>
 					<tr>
